--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,19 @@
-spring.application.name=shop
+spring:
+  application:
+    name: shop
+  datasource:
+    url: jdbc:postgresql://localhost:5432/shop
+    username: root
+    password: root
+  jpa:
+    show-sql: true
+    properties:
+      hibernate.hibernate.format_sql: true
+  data:
+    redis:
+      host: localhost
+      port: 6380
+server:
+  port: 8081
+  servlet:
+    context-path: /api/shop
